--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
+alembic==1.4.2
 aniso8601==8.0.0
 attrs==19.3.0
 click==7.1.1
 Flask==1.1.2
+Flask-Migrate==2.5.3
 flask-restx==0.2.0
+Flask-SQLAlchemy==2.4.1
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
+Mako==1.1.2
 MarkupSafe==1.1.1
 pyrsistent==0.16.0
+python-dateutil==2.8.1
+python-dotenv==0.13.0
+python-editor==1.0.4
 pytz==2019.3
 six==1.14.0
+SQLAlchemy==1.3.16
 Werkzeug==1.0.1
 zipp==3.1.0
